# engine

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FindZeroMQ.cmake
docker/: build  shell
etc/: upgrade
include/mmpg/: action.hpp  game.hpp  world.hpp
include/mmpg/master/: process.hpp
include/mmpg/player/: ai.hpp  process.hpp
src/: action.cpp  action.hpp  base64.cpp  base64.hpp  debug.cpp  debug.hpp  game.cpp  log.cpp  log.hpp  main.cpp  master.cpp  message_buffer.cpp  message_buffer.hpp  notifier.cpp  notifier.hpp  server.cpp  server.hpp  utils.cpp  utils.hpp  world.cpp  world.hpp
src/action/: move.cpp  move.hpp
src/cmd/master/: api.cpp  api.hpp  main.cpp  master.cpp  master.hpp  notifier.cpp  notifier.hpp  player.cpp  player.hpp  server.cpp  server.hpp  worker.cpp  worker.hpp
src/cmd/player/: ai.cpp  ai.hpp  main.cpp
src/cmd/worker/: main.cpp  player.cpp  player.hpp
src/master/: api.cpp  api.hpp  main.cpp  notifier.cpp  notifier.hpp  player.cpp  process.cpp  process.hpp  server.cpp  server.hpp  worker.cpp  worker.hpp
src/math/: vec2.hpp
src/player/: ai.cpp  ai.hpp  master.cpp  master.hpp  process.cpp  process.hpp
src/world/: solar_system.cpp  solar_system.hpp  sun.cpp  sun.hpp  universe.cpp  universe.hpp
